--- a/card.html
+++ b/card.html
@@ -10,8 +10,8 @@
     <div class="main">
         <div class="left">
             <div class="header">
-                <p class="inHeader" onclick="addCard()">add card</p>
-                <p class="inHeader" onclick="sortDivs()">sort cards</p>
+                <p class="inHeader" onclick="createCard()">add card</p>
+                <p class="inHeader" onclick="sortCards()">sort cards</p>
                 <p class="inHeader" onclick="removeAll()">remove cards</p>
             </div>
             <div class="numbers">
