--- a/card.html
+++ b/card.html
@@ -24,8 +24,7 @@
             increase. <br>
             Press an X icon on top right to delete them. <br> And the "remove cards" button to delete all cards. </div>
     </div>
-    <script src="card.js">
-    </script>
+    <script src="card.js"></script>
 </body>
 
 </html>
