--- a/personEnum.html
+++ b/personEnum.html
@@ -3,6 +3,9 @@
     <head>
     </head>
     <body>
+        <button onclick="findByName('Vazgen')">Button 1</button>
+        <button onclick="checkAdult(25)">Button 2</button>
+        <button onclick="checkProffesion(professionEnum.Developer)">Button 3</button>
         <script src="personEnum.js"></script>
     </body>
 </html>
