--- a/card.html
+++ b/card.html
@@ -20,9 +20,8 @@
                 <p class="inFooter">footer</p>
             </div>
         </div>
-        <div class="right">Press "add card" button to add new Card. <br> Use "sort cards" button to sort Cards by
-            increase. <br>
-            Press an X icon on top right to delete them. <br> And the "remove cards" button to delete all cards. </div>
+        <div class="right">Press the "add card" button to add the new Card. <br> Use the "sort cards" button to sort the Cards by the increase. <br>
+            Press an X icon on the top right to delete them. <br> And the "remove cards" button to delete all cards. </div>
     </div>
     <script src="card.js"></script>
 </body>
